k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: ai.digitalaurion.aurion
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 80
          - path: /go
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
